--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "rental-app",
+  "homepage": "https://github.com/ChewangGyalpuBhutia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
@@ -25,6 +28,7 @@
     "@types/react-dom": "^18",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.0.0",
+    "gh-pages": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
