--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rental-app",
-  "homepage": "https://github.com/ChewangGyalpuBhutia/PersonalPortfolioNext",
+  "homepage": "https://ChewangGyalpuBhutia.github.io/PersonalPortfolioNext",
   "version": "0.1.0",
   "private": true,
   "scripts": {
