--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rental-app",
+  "name": "portfolio",
   "homepage": "https://ChewangGyalpuBhutia.github.io/PersonalPortfolioNext",
   "version": "0.1.0",
   "private": true,
@@ -8,8 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "pnpm run build",
-    "deploy": "gh-pages -d out"
+    "deploy": "next build && gh-pages -d out --nojekyll",
+    "clean": "rimraf .next out"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
@@ -31,6 +31,7 @@
     "gh-pages": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "rimraf": "^3.0.2"
   }
 }
